RetwisChoral: chh, java classes, and projection